--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,31 +1,38 @@
 name: Generate Snake Animation
 
 on:
-  schedule: # executa a cada 24h
-    - cron: "0 0 * * *"
-  workflow_dispatch: # permite rodar manualmente
+  schedule:
+    - cron: "0 0 * * *" # executa uma vez por dia
+  workflow_dispatch:
   push:
     branches:
       - main
 
 jobs:
   build:
-    name: Generate GitHub Contribution Snake
+    name: Generate GitHub Contribution Snake (Dark)
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Generate Snake Animation (Dark Theme)
+      - name: Generate Snake Animation (Dark Mode)
         uses: Platane/snk@v3
         with:
           github_user_name: DevDaviSouza
-          outputs: dist/github-contribution-grid-snake-dark.svg
+          outputs: |
+            dist/github-contribution-grid-snake-dark.svg
           color_snake: "#00FF9F"
-          color_dots: "#161B22,#0E4429,#006D32,#26A641,#39D353" # tons do tema dark do GitHub
+          color_dots: "#161B22,#0E4429,#006D32,#26A641,#39D353"
           color_bg: "#0D1117"
           color_border: "#0D1117"
+
+      - name: Add black background manually
+        run: |
+          echo '<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" style="background-color:#0D1117">' > dist/temp.svg
+          tail -n +2 dist/github-contribution-grid-snake-dark.svg >> dist/temp.svg
+          mv dist/temp.svg dist/github-contribution-grid-snake-dark.svg
 
       - name: Upload to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v3
