--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -21,18 +21,20 @@ jobs:
         uses: Platane/snk@v3
         with:
           github_user_name: DevDaviSouza
-          outputs: |
-            dist/github-contribution-grid-snake-dark.svg
+          outputs: dist/github-contribution-grid-snake-dark.svg
           color_snake: "#00FF9F"
           color_dots: "#161B22,#0E4429,#006D32,#26A641,#39D353"
           color_bg: "#0D1117"
           color_border: "#0D1117"
 
-      - name: Add black background manually
+      - name: Ensure dist directory exists
+        run: mkdir -p dist
+
+      - name: Add black background manually (fix permissions)
         run: |
-          echo '<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" style="background-color:#0D1117">' > dist/temp.svg
-          tail -n +2 dist/github-contribution-grid-snake-dark.svg >> dist/temp.svg
-          mv dist/temp.svg dist/github-contribution-grid-snake-dark.svg
+          echo '<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" style="background-color:#0D1117">' > ./dist/temp.svg
+          tail -n +2 ./dist/github-contribution-grid-snake-dark.svg >> ./dist/temp.svg
+          mv -f ./dist/temp.svg ./dist/github-contribution-grid-snake-dark.svg
 
       - name: Upload to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v3
